--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
 
 @import "nav.css";
 @import "main.css";
+@import "main-create.css";
 @import "main-tools.css";
 @import "main-items.css";
 @import "item.css";
