--- a/styles/main-items.css
+++ b/styles/main-items.css
@@ -28,5 +28,6 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  align-items: flex-start;
+  /* align-items: flex-start; */
+  align-items: stretch;
 }
