--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,16 +5,24 @@ header {
 
 .nav-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  /* justify-content: space-around; */
   align-items: center;
+  padding: 0 200px;
 }
 
 .nav__name {
   color: inherit;
-  padding: 20px 10px;
+  padding: 20px 30px;
+  margin: 0;
 }
 
-.nav__name h4 {
+.nav__name.selected {
+  background-color: #d2d4d6;
+}
+
+
+.nav__name > h4 {
   margin: 0;
 }
 
